Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Rtube by HasanAliKaraca</title>
+    <title>RTube by HasanAliKaraca</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Rtube</h1>
+        <h1>RTube</h1>
         <h2>Sample project for using angular with youtube api</h2>
         <a href="https://github.com/HasanAliKaraca/RTube" class="button"><small>View project on</small> GitHub</a>
       </div>
