--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <md-toolbar class="md-whiteframe-z2 "  >
         <div class="md-toolbar-tools">
-            <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleCategoriesList()">
+            <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()">
                 <md-icon md-svg-icon="assets/svg/menu.svg"></md-icon>
             </md-button>
             <h2>
@@ -40,7 +40,7 @@
 
         <md-sidenav flex class="site-sidenav md-sidenav-left md-whiteframe-z2"
                     md-component-id="sideNavCategoryList" aria-label="Show User List"
-                    md-is-locked-open="$mdMedia('gt-sm')">
+                  md-is-locked-open="$mdMedia('gt-sm')" >
             <md-subheader class="md-primary">Best of YouTube</md-subheader>
             <md-divider ng-if="!$last"></md-divider>
             <!--menu list-->
@@ -53,9 +53,9 @@
             </md-list>
         </md-sidenav>
         <!--view body-->
-        <div flex class="md-whiteframe-z2" layout="row" layout-wrap ng-view>
+        <md-content flex class="md-whiteframe-z2" layout="row" layout-wrap ng-view>
              
-        </div>
+        </md-content>
 
     </div>
 
